# spotify_to_bandcamp

./: .gitignore  bandcamp.py  dev.py  main.py  pyproject.toml  recents.py  saved_albums.py  saved_tracks.py  spotify_api.py  streamlit.py  streamlit_app.py  streamlit_app_2.py  tops.py
data/cleaned/: saved_albums.parquet  saved_tracks.parquet  top_tracks_long_term.parquet  top_tracks_medium_term.parquet  top_tracks_short_term.parquet
data/raw/: saved_albums.parquet  saved_tracks.parquet  top_artists_long_term.parquet  top_artists_medium_term.parquet  top_artists_short_term.parquet  top_tracks_long_term.parquet  top_tracks_medium_term.parquet  top_tracks_short_term.parquet
data/streamlit/: albums.parquet  tracks.parquet
src/: about.py  bandcamp.py  filters.py  recents.py  saved_albums.py  saved_tracks.py  spotify_api.py  tops.py
